backend/utils/interpreter/myYacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> entry
Rule 1     entry -> start
Rule 2     expression -> TRUE
Rule 3     expression -> FALSE
Rule 4     start -> start stmt_print SPLIT
Rule 5     start -> start stmt
Rule 6     start -> empty
Rule 7     expression -> NUMBER
Rule 8     expression -> STRING
Rule 9     stmt -> SPLIT
Rule 10    expression -> VAR
Rule 11    stmt -> expression SPLIT
Rule 12    stmt_print -> PRINT LPAREN expr_list RPAREN
Rule 13    range -> RANGE LPAREN expr_list RPAREN
Rule 14    stmt -> FOR VAR IN range COLON stmt_print SPLIT
Rule 15    stmt -> stmt_print IF condition_list ELSE stmt_print SPLIT
Rule 16    if_assign -> VAR ASSIGN expression
Rule 17    stmt -> if_assign IF condition_list ELSE expression SPLIT
Rule 18    stmt -> IF condition_list COLON stmt_print SPLIT
Rule 19    stmt -> IF condition_list COLON SPLIT stmt_print SPLIT
Rule 20    stmt -> VAR ASSIGN expression SPLIT
Rule 21    stmt -> VAR ASSIGN condition_list SPLIT
Rule 22    expr_list -> expression
Rule 23    expr_list -> expr_list COMMA expression
Rule 24    condition_list -> expression
Rule 25    condition_list -> condition_list AND expression
Rule 26    condition_list -> condition_list OR expression
Rule 27    condition_list -> LPAREN condition_list RPAREN
Rule 28    expression -> expression ADD expression
Rule 29    expression -> expression REM expression
Rule 30    expression -> expression MUL expression
Rule 31    expression -> expression DIV expression
Rule 32    expression -> expression MOD expression
Rule 33    expression -> expression GT expression
Rule 34    expression -> expression LT expression
Rule 35    expression -> expression GE expression
Rule 36    expression -> expression LE expression
Rule 37    expression -> expression EQ expression
Rule 38    expression -> expression NE expression
Rule 39    expression -> expression POW expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 28
AND                  : 25
ASSIGN               : 16 20 21
COLON                : 14 18 19
COMMA                : 23
DIV                  : 31
ELSE                 : 15 17
EQ                   : 37
FALSE                : 3
FOR                  : 14
GE                   : 35
GT                   : 33
IF                   : 15 17 18 19
IN                   : 14
LE                   : 36
LPAREN               : 12 13 27 40
LT                   : 34
MOD                  : 32
MUL                  : 30
NE                   : 38
NUMBER               : 7
OR                   : 26
POW                  : 39
PRINT                : 12
RANGE                : 13
REM                  : 29
RPAREN               : 12 13 27 40
SPLIT                : 4 9 11 14 15 17 18 19 19 20 21
STRING               : 8
TRUE                 : 2
VAR                  : 10 14 16 20 21
error                : 

Nonterminals, with rules where they appear

condition_list       : 15 17 18 19 21 25 26 27
empty                : 6
entry                : 0
expr_list            : 12 13 23
expression           : 11 16 17 20 22 23 24 25 26 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40
if_assign            : 17
range                : 14
start                : 1 4 5
stmt                 : 5
stmt_print           : 4 14 15 15 18 19

Parsing method: LALR

state 0

    (0) S' -> . entry
    (1) entry -> . start
    (4) start -> . start stmt_print SPLIT
    (5) start -> . start stmt
    (6) start -> . empty
    (41) empty -> .

    PRINT           reduce using rule 41 (empty -> .)
    SPLIT           reduce using rule 41 (empty -> .)
    FOR             reduce using rule 41 (empty -> .)
    IF              reduce using rule 41 (empty -> .)
    VAR             reduce using rule 41 (empty -> .)
    TRUE            reduce using rule 41 (empty -> .)
    FALSE           reduce using rule 41 (empty -> .)
    NUMBER          reduce using rule 41 (empty -> .)
    STRING          reduce using rule 41 (empty -> .)
    LPAREN          reduce using rule 41 (empty -> .)
    $end            reduce using rule 41 (empty -> .)

    entry                          shift and go to state 1
    start                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> entry .



state 2

    (1) entry -> start .
    (4) start -> start . stmt_print SPLIT
    (5) start -> start . stmt
    (12) stmt_print -> . PRINT LPAREN expr_list RPAREN
    (9) stmt -> . SPLIT
    (11) stmt -> . expression SPLIT
    (14) stmt -> . FOR VAR IN range COLON stmt_print SPLIT
    (15) stmt -> . stmt_print IF condition_list ELSE stmt_print SPLIT
    (17) stmt -> . if_assign IF condition_list ELSE expression SPLIT
    (18) stmt -> . IF condition_list COLON stmt_print SPLIT
    (19) stmt -> . IF condition_list COLON SPLIT stmt_print SPLIT
    (20) stmt -> . VAR ASSIGN expression SPLIT
    (21) stmt -> . VAR ASSIGN condition_list SPLIT
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN
    (16) if_assign -> . VAR ASSIGN expression

    $end            reduce using rule 1 (entry -> start .)
    PRINT           shift and go to state 7
    SPLIT           shift and go to state 5
    FOR             shift and go to state 10
    IF              shift and go to state 12
    VAR             shift and go to state 11
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    LPAREN          shift and go to state 8

    stmt_print                     shift and go to state 4
    stmt                           shift and go to state 6
    expression                     shift and go to state 9
    if_assign                      shift and go to state 13

state 3

    (6) start -> empty .

    PRINT           reduce using rule 6 (start -> empty .)
    SPLIT           reduce using rule 6 (start -> empty .)
    FOR             reduce using rule 6 (start -> empty .)
    IF              reduce using rule 6 (start -> empty .)
    VAR             reduce using rule 6 (start -> empty .)
    TRUE            reduce using rule 6 (start -> empty .)
    FALSE           reduce using rule 6 (start -> empty .)
    NUMBER          reduce using rule 6 (start -> empty .)
    STRING          reduce using rule 6 (start -> empty .)
    LPAREN          reduce using rule 6 (start -> empty .)
    $end            reduce using rule 6 (start -> empty .)


state 4

    (4) start -> start stmt_print . SPLIT
    (15) stmt -> stmt_print . IF condition_list ELSE stmt_print SPLIT

    SPLIT           shift and go to state 18
    IF              shift and go to state 19


state 5

    (9) stmt -> SPLIT .

    PRINT           reduce using rule 9 (stmt -> SPLIT .)
    SPLIT           reduce using rule 9 (stmt -> SPLIT .)
    FOR             reduce using rule 9 (stmt -> SPLIT .)
    IF              reduce using rule 9 (stmt -> SPLIT .)
    VAR             reduce using rule 9 (stmt -> SPLIT .)
    TRUE            reduce using rule 9 (stmt -> SPLIT .)
    FALSE           reduce using rule 9 (stmt -> SPLIT .)
    NUMBER          reduce using rule 9 (stmt -> SPLIT .)
    STRING          reduce using rule 9 (stmt -> SPLIT .)
    LPAREN          reduce using rule 9 (stmt -> SPLIT .)
    $end            reduce using rule 9 (stmt -> SPLIT .)


state 6

    (5) start -> start stmt .

    PRINT           reduce using rule 5 (start -> start stmt .)
    SPLIT           reduce using rule 5 (start -> start stmt .)
    FOR             reduce using rule 5 (start -> start stmt .)
    IF              reduce using rule 5 (start -> start stmt .)
    VAR             reduce using rule 5 (start -> start stmt .)
    TRUE            reduce using rule 5 (start -> start stmt .)
    FALSE           reduce using rule 5 (start -> start stmt .)
    NUMBER          reduce using rule 5 (start -> start stmt .)
    STRING          reduce using rule 5 (start -> start stmt .)
    LPAREN          reduce using rule 5 (start -> start stmt .)
    $end            reduce using rule 5 (start -> start stmt .)


state 7

    (12) stmt_print -> PRINT . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 20


state 8

    (40) expression -> LPAREN . expression RPAREN
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 21

state 9

    (11) stmt -> expression . SPLIT
    (28) expression -> expression . ADD expression
    (29) expression -> expression . REM expression
    (30) expression -> expression . MUL expression
    (31) expression -> expression . DIV expression
    (32) expression -> expression . MOD expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . LT expression
    (35) expression -> expression . GE expression
    (36) expression -> expression . LE expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . POW expression

    SPLIT           shift and go to state 23
    ADD             shift and go to state 24
    REM             shift and go to state 25
    MUL             shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28
    GT              shift and go to state 29
    LT              shift and go to state 30
    GE              shift and go to state 31
    LE              shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    POW             shift and go to state 35


state 10

    (14) stmt -> FOR . VAR IN range COLON stmt_print SPLIT

    VAR             shift and go to state 36


state 11

    (20) stmt -> VAR . ASSIGN expression SPLIT
    (21) stmt -> VAR . ASSIGN condition_list SPLIT
    (10) expression -> VAR .
    (16) if_assign -> VAR . ASSIGN expression

    ASSIGN          shift and go to state 37
    SPLIT           reduce using rule 10 (expression -> VAR .)
    ADD             reduce using rule 10 (expression -> VAR .)
    REM             reduce using rule 10 (expression -> VAR .)
    MUL             reduce using rule 10 (expression -> VAR .)
    DIV             reduce using rule 10 (expression -> VAR .)
    MOD             reduce using rule 10 (expression -> VAR .)
    GT              reduce using rule 10 (expression -> VAR .)
    LT              reduce using rule 10 (expression -> VAR .)
    GE              reduce using rule 10 (expression -> VAR .)
    LE              reduce using rule 10 (expression -> VAR .)
    EQ              reduce using rule 10 (expression -> VAR .)
    NE              reduce using rule 10 (expression -> VAR .)
    POW             reduce using rule 10 (expression -> VAR .)


state 12

    (18) stmt -> IF . condition_list COLON stmt_print SPLIT
    (19) stmt -> IF . condition_list COLON SPLIT stmt_print SPLIT
    (24) condition_list -> . expression
    (25) condition_list -> . condition_list AND expression
    (26) condition_list -> . condition_list OR expression
    (27) condition_list -> . LPAREN condition_list RPAREN
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 40
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22

    condition_list                 shift and go to state 38
    expression                     shift and go to state 39

state 13

    (17) stmt -> if_assign . IF condition_list ELSE expression SPLIT

    IF              shift and go to state 41


state 14

    (2) expression -> TRUE .

    SPLIT           reduce using rule 2 (expression -> TRUE .)
    ADD             reduce using rule 2 (expression -> TRUE .)
    REM             reduce using rule 2 (expression -> TRUE .)
    MUL             reduce using rule 2 (expression -> TRUE .)
    DIV             reduce using rule 2 (expression -> TRUE .)
    MOD             reduce using rule 2 (expression -> TRUE .)
    GT              reduce using rule 2 (expression -> TRUE .)
    LT              reduce using rule 2 (expression -> TRUE .)
    GE              reduce using rule 2 (expression -> TRUE .)
    LE              reduce using rule 2 (expression -> TRUE .)
    EQ              reduce using rule 2 (expression -> TRUE .)
    NE              reduce using rule 2 (expression -> TRUE .)
    POW             reduce using rule 2 (expression -> TRUE .)
    RPAREN          reduce using rule 2 (expression -> TRUE .)
    COLON           reduce using rule 2 (expression -> TRUE .)
    AND             reduce using rule 2 (expression -> TRUE .)
    OR              reduce using rule 2 (expression -> TRUE .)
    ELSE            reduce using rule 2 (expression -> TRUE .)
    COMMA           reduce using rule 2 (expression -> TRUE .)
    IF              reduce using rule 2 (expression -> TRUE .)


state 15

    (3) expression -> FALSE .

    SPLIT           reduce using rule 3 (expression -> FALSE .)
    ADD             reduce using rule 3 (expression -> FALSE .)
    REM             reduce using rule 3 (expression -> FALSE .)
    MUL             reduce using rule 3 (expression -> FALSE .)
    DIV             reduce using rule 3 (expression -> FALSE .)
    MOD             reduce using rule 3 (expression -> FALSE .)
    GT              reduce using rule 3 (expression -> FALSE .)
    LT              reduce using rule 3 (expression -> FALSE .)
    GE              reduce using rule 3 (expression -> FALSE .)
    LE              reduce using rule 3 (expression -> FALSE .)
    EQ              reduce using rule 3 (expression -> FALSE .)
    NE              reduce using rule 3 (expression -> FALSE .)
    POW             reduce using rule 3 (expression -> FALSE .)
    RPAREN          reduce using rule 3 (expression -> FALSE .)
    COLON           reduce using rule 3 (expression -> FALSE .)
    AND             reduce using rule 3 (expression -> FALSE .)
    OR              reduce using rule 3 (expression -> FALSE .)
    ELSE            reduce using rule 3 (expression -> FALSE .)
    COMMA           reduce using rule 3 (expression -> FALSE .)
    IF              reduce using rule 3 (expression -> FALSE .)


state 16

    (7) expression -> NUMBER .

    SPLIT           reduce using rule 7 (expression -> NUMBER .)
    ADD             reduce using rule 7 (expression -> NUMBER .)
    REM             reduce using rule 7 (expression -> NUMBER .)
    MUL             reduce using rule 7 (expression -> NUMBER .)
    DIV             reduce using rule 7 (expression -> NUMBER .)
    MOD             reduce using rule 7 (expression -> NUMBER .)
    GT              reduce using rule 7 (expression -> NUMBER .)
    LT              reduce using rule 7 (expression -> NUMBER .)
    GE              reduce using rule 7 (expression -> NUMBER .)
    LE              reduce using rule 7 (expression -> NUMBER .)
    EQ              reduce using rule 7 (expression -> NUMBER .)
    NE              reduce using rule 7 (expression -> NUMBER .)
    POW             reduce using rule 7 (expression -> NUMBER .)
    RPAREN          reduce using rule 7 (expression -> NUMBER .)
    COLON           reduce using rule 7 (expression -> NUMBER .)
    AND             reduce using rule 7 (expression -> NUMBER .)
    OR              reduce using rule 7 (expression -> NUMBER .)
    ELSE            reduce using rule 7 (expression -> NUMBER .)
    COMMA           reduce using rule 7 (expression -> NUMBER .)
    IF              reduce using rule 7 (expression -> NUMBER .)


state 17

    (8) expression -> STRING .

    SPLIT           reduce using rule 8 (expression -> STRING .)
    ADD             reduce using rule 8 (expression -> STRING .)
    REM             reduce using rule 8 (expression -> STRING .)
    MUL             reduce using rule 8 (expression -> STRING .)
    DIV             reduce using rule 8 (expression -> STRING .)
    MOD             reduce using rule 8 (expression -> STRING .)
    GT              reduce using rule 8 (expression -> STRING .)
    LT              reduce using rule 8 (expression -> STRING .)
    GE              reduce using rule 8 (expression -> STRING .)
    LE              reduce using rule 8 (expression -> STRING .)
    EQ              reduce using rule 8 (expression -> STRING .)
    NE              reduce using rule 8 (expression -> STRING .)
    POW             reduce using rule 8 (expression -> STRING .)
    RPAREN          reduce using rule 8 (expression -> STRING .)
    COLON           reduce using rule 8 (expression -> STRING .)
    AND             reduce using rule 8 (expression -> STRING .)
    OR              reduce using rule 8 (expression -> STRING .)
    ELSE            reduce using rule 8 (expression -> STRING .)
    COMMA           reduce using rule 8 (expression -> STRING .)
    IF              reduce using rule 8 (expression -> STRING .)


state 18

    (4) start -> start stmt_print SPLIT .

    PRINT           reduce using rule 4 (start -> start stmt_print SPLIT .)
    SPLIT           reduce using rule 4 (start -> start stmt_print SPLIT .)
    FOR             reduce using rule 4 (start -> start stmt_print SPLIT .)
    IF              reduce using rule 4 (start -> start stmt_print SPLIT .)
    VAR             reduce using rule 4 (start -> start stmt_print SPLIT .)
    TRUE            reduce using rule 4 (start -> start stmt_print SPLIT .)
    FALSE           reduce using rule 4 (start -> start stmt_print SPLIT .)
    NUMBER          reduce using rule 4 (start -> start stmt_print SPLIT .)
    STRING          reduce using rule 4 (start -> start stmt_print SPLIT .)
    LPAREN          reduce using rule 4 (start -> start stmt_print SPLIT .)
    $end            reduce using rule 4 (start -> start stmt_print SPLIT .)


state 19

    (15) stmt -> stmt_print IF . condition_list ELSE stmt_print SPLIT
    (24) condition_list -> . expression
    (25) condition_list -> . condition_list AND expression
    (26) condition_list -> . condition_list OR expression
    (27) condition_list -> . LPAREN condition_list RPAREN
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 40
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22

    condition_list                 shift and go to state 42
    expression                     shift and go to state 39

state 20

    (12) stmt_print -> PRINT LPAREN . expr_list RPAREN
    (22) expr_list -> . expression
    (23) expr_list -> . expr_list COMMA expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expr_list                      shift and go to state 43
    expression                     shift and go to state 44

state 21

    (40) expression -> LPAREN expression . RPAREN
    (28) expression -> expression . ADD expression
    (29) expression -> expression . REM expression
    (30) expression -> expression . MUL expression
    (31) expression -> expression . DIV expression
    (32) expression -> expression . MOD expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . LT expression
    (35) expression -> expression . GE expression
    (36) expression -> expression . LE expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . POW expression

    RPAREN          shift and go to state 45
    ADD             shift and go to state 24
    REM             shift and go to state 25
    MUL             shift and go to state 26
    DIV             shift and go to state 27
    MOD             shift and go to state 28
    GT              shift and go to state 29
    LT              shift and go to state 30
    GE              shift and go to state 31
    LE              shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    POW             shift and go to state 35


state 22

    (10) expression -> VAR .

    RPAREN          reduce using rule 10 (expression -> VAR .)
    ADD             reduce using rule 10 (expression -> VAR .)
    REM             reduce using rule 10 (expression -> VAR .)
    MUL             reduce using rule 10 (expression -> VAR .)
    DIV             reduce using rule 10 (expression -> VAR .)
    MOD             reduce using rule 10 (expression -> VAR .)
    GT              reduce using rule 10 (expression -> VAR .)
    LT              reduce using rule 10 (expression -> VAR .)
    GE              reduce using rule 10 (expression -> VAR .)
    LE              reduce using rule 10 (expression -> VAR .)
    EQ              reduce using rule 10 (expression -> VAR .)
    NE              reduce using rule 10 (expression -> VAR .)
    POW             reduce using rule 10 (expression -> VAR .)
    COLON           reduce using rule 10 (expression -> VAR .)
    AND             reduce using rule 10 (expression -> VAR .)
    OR              reduce using rule 10 (expression -> VAR .)
    ELSE            reduce using rule 10 (expression -> VAR .)
    COMMA           reduce using rule 10 (expression -> VAR .)
    SPLIT           reduce using rule 10 (expression -> VAR .)
    IF              reduce using rule 10 (expression -> VAR .)


state 23

    (11) stmt -> expression SPLIT .

    PRINT           reduce using rule 11 (stmt -> expression SPLIT .)
    SPLIT           reduce using rule 11 (stmt -> expression SPLIT .)
    FOR             reduce using rule 11 (stmt -> expression SPLIT .)
    IF              reduce using rule 11 (stmt -> expression SPLIT .)
    VAR             reduce using rule 11 (stmt -> expression SPLIT .)
    TRUE            reduce using rule 11 (stmt -> expression SPLIT .)
    FALSE           reduce using rule 11 (stmt -> expression SPLIT .)
    NUMBER          reduce using rule 11 (stmt -> expression SPLIT .)
    STRING          reduce using rule 11 (stmt -> expression SPLIT .)
    LPAREN          reduce using rule 11 (stmt -> expression SPLIT .)
    $end            reduce using rule 11 (stmt -> expression SPLIT .)


state 24

    (28) expression -> expression ADD . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 46

state 25

    (29) expression -> expression REM . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 47

state 26

    (30) expression -> expression MUL . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 48

state 27

    (31) expression -> expression DIV . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 49

state 28

    (32) expression -> expression MOD . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 50

state 29

    (33) expression -> expression GT . expression
    (2) expression -> . TRUE
    (3) expression -> . FALSE
    (7) expression -> . NUMBER
    (8) expression -> . STRING
    (10) expression -> . VAR
    (28) expression -> . expression ADD expression
    (29) expression -> . expression REM expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LT expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression LE expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression POW expression
    (40) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 22
    LPAREN          shift and go to state 8

    expression                     shift and go to state 51

state 30
